# Open-Reality

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  MODULE.bazel  Manifest.toml  Project.toml  README.md
.github/workflows/: cli.yml  release.yml
bazel/: BUILD.bazel  bun.bzl  julia.bzl  platforms.bzl
docs/: api-reference.md  architecture.md  examples.md  getting-started.md
examples/: BUILD.bazel  _test_nofxaa.jl  _test_postfx.jl  basic_scene.jl  boulder_scene.jl  dungeon_crawler.jl  features_showcase.jl  gameplay_systems_demo.jl  instancing_demo.jl  lod_demo.jl  maze_game.jl  metal_test.jl  pbr_showcase.jl  postfx_demo.jl  terrain_demo.jl  vulkan_minimal_test.jl  vulkan_test.jl
metal_bridge/: BUILD.bazel  Package.swift
metal_bridge/Sources/MetalBridge/: MetalBlit.swift  MetalBuffer.swift  MetalDevice.swift  MetalEncoding.swift  MetalExports.swift  MetalRenderTarget.swift  MetalShader.swift  MetalTexture.swift  MetalTypes.swift
open-reality-website/: BUILD.bazel  bunfig.toml  nuxt.config.ts  package.json  tailwind.config.ts  tsconfig.json
open-reality-website/.storybook/: main.ts  preview.ts
open-reality-website/__tests__/: helpers.ts  preload.ts  setup.ts
open-reality-website/__tests__/components/: CodeBlock.spec.ts  DocsSidebar.spec.ts  FeatureCard.spec.ts  HeroSection.spec.ts  NavBar.spec.ts  SiteFooter.spec.ts  StatBadge.spec.ts  TerminalWindow.spec.ts
open-reality-website/__tests__/composables/: useHighlight.spec.ts
open-reality-website/__tests__/stubs/: NuxtLink.ts
open-reality-website/app/assets/css/: main.css
open-reality-website/app/components/: CodeBlock.vue  DocsSidebar.vue  FeatureCard.vue  HeroSection.vue  NavBar.vue  SiteFooter.vue  StatBadge.vue  TerminalWindow.vue
open-reality-website/app/composables/: useHighlight.ts
open-reality-website/app/layouts/: default.vue  docs.vue
open-reality-website/app/pages/: index.vue
open-reality-website/app/pages/docs/: architecture.vue  components.vue  gameplay.vue  index.vue  physics.vue  rendering.vue  systems.vue
open-reality-website/public/: install.ps1  install.sh
open-reality-website/stories/: CodeBlock.stories.ts  DocsSidebar.stories.ts  FeatureCard.stories.ts  HeroSection.stories.ts  NavBar.stories.ts  SiteFooter.stories.ts  StatBadge.stories.ts  TerminalWindow.stories.ts
openreality-cli/: BUILD.bazel  Cargo.toml
openreality-cli/src/: app.rs  cli.rs  detect.rs  event.rs  lib.rs  main.rs  project.rs  state.rs
openreality-cli/src/commands/: build_cmd.rs  init.rs  mod.rs  new.rs  run_cmd.rs  test_cmd.rs
openreality-cli/src/ui/: help.rs  mod.rs  test_view.rs
openreality-gpu-shared/: BUILD.bazel  Cargo.toml
openreality-gpu-shared/shaders/: bloom_blur.wgsl  bloom_composite.wgsl  bloom_extract.wgsl  deferred_lighting.wgsl  fullscreen_quad.wgsl  fxaa.wgsl  gbuffer_frag.wgsl  gbuffer_vert.wgsl  present.wgsl  shadow_depth.wgsl  ssao.wgsl  ssao_blur.wgsl  ssr.wgsl  taa.wgsl
openreality-gpu-shared/src/: lib.rs  math.rs  scene_format.rs  shaders.rs  uniforms.rs
openreality-web/: BUILD.bazel  Cargo.toml  build.sh  index.html
openreality-web/src/: animation.rs  app.rs  input.rs  lib.rs  particles.rs  scene.rs  skinning.rs  transform.rs
openreality-wgpu/: BUILD.bazel  Cargo.toml
openreality-wgpu/src/: backend.rs  handle.rs  lib.rs
src/: BUILD.bazel  OpenReality.jl  ecs.jl  scene.jl  state.jl
src/audio/: openal_backend.jl
src/backend/: abstract.jl  gpu_types.jl  opengl.jl
src/backend/metal/: metal_backend.jl  metal_deferred.jl  metal_ffi.jl  metal_framebuffer.jl  metal_ibl.jl  metal_mesh.jl  metal_pbr.jl  metal_postprocess.jl  metal_shader.jl  metal_shadows.jl  metal_ssao.jl  metal_ssr.jl  metal_taa.jl  metal_texture.jl  metal_types.jl  metal_uniforms.jl
src/backend/metal/shaders/: blit.metal  bloom_blur.metal  bloom_extract.metal  composite.metal  deferred_lighting.metal  fxaa.metal  gbuffer.metal  ibl_brdf_lut.metal  ibl_equirect.metal  ibl_irradiance.metal  ibl_prefilter.metal  pbr_forward.metal  shadow_depth.metal  ssao.metal  ssr.metal  taa.metal
src/backend/opengl/: opengl_deferred.jl  opengl_dof.jl  opengl_framebuffer.jl  opengl_gpu_particles.jl  opengl_ibl.jl  opengl_instancing.jl  opengl_mesh.jl  opengl_motion_blur.jl  opengl_particles.jl  opengl_pbr.jl  opengl_postprocess.jl  opengl_shader.jl  opengl_shadows.jl  opengl_ssao.jl  opengl_ssr.jl  opengl_taa.jl  opengl_terrain.jl  opengl_texture.jl  opengl_ui.jl
src/backend/vulkan/: vulkan_backend.jl  vulkan_deferred.jl  vulkan_descriptors.jl  vulkan_device.jl  vulkan_framebuffer.jl  vulkan_ibl.jl  vulkan_memory.jl  vulkan_mesh.jl  vulkan_pbr.jl  vulkan_postprocess.jl  vulkan_shader.jl  vulkan_shadows.jl  vulkan_ssao.jl  vulkan_ssr.jl  vulkan_swapchain.jl  vulkan_taa.jl  vulkan_texture.jl  vulkan_types.jl  vulkan_uniforms.jl
src/backend/webgpu/: webgpu_backend.jl  webgpu_ffi.jl  webgpu_types.jl
src/components/: audio.jl  camera.jl  collider.jl  health.jl  inventory.jl  lights.jl  lod.jl  material.jl  mesh.jl  particle_system.jl  primitives.jl  script.jl  skeleton.jl  terrain.jl  transform.jl
src/export/: scene_export.jl
src/game/: behavior_tree.jl  config.jl  context.jl  coroutines.jl  debug_console.jl  dialogue.jl  event_bus.jl  game_manager.jl  items.jl  quests.jl  state_machine.jl  timers.jl  tweens.jl
src/loading/: gltf_loader.jl  loader.jl
src/math/: transforms.jl
src/physics/: broadphase.jl  narrowphase.jl  raycast.jl  shapes.jl  triggers.jl  world.jl
src/rendering/: camera_utils.jl  csm.jl  deferred.jl  frame_preparation.jl  framebuffer.jl  gbuffer.jl  gpu_resources.jl  ibl.jl  instancing.jl  lod.jl  pbr_pipeline.jl  pipeline.jl  post_processing.jl  shader.jl  shader_variants.jl  shadow_map.jl  ssao.jl  ssr.jl  systems.jl  taa.jl  terrain.jl  texture.jl
src/serialization/: save_load.jl
src/systems/: audio.jl  health.jl  inventory.jl  particles.jl  scripts.jl  skinning.jl  terrain.jl
src/ui/: font.jl  types.jl  widgets.jl
src/windowing/: glfw.jl  input.jl
test/: BUILD.bazel  runtests.jl
