load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

rust_binary(
    name = "orcli",
    srcs = ["src/main.rs"],
    deps = all_crate_deps(
        normal = True,
    ) + [":openreality_cli_lib"],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
)

rust_library(
    name = "openreality_cli_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "openreality_cli",
    deps = all_crate_deps(normal = True),
    proc_macro_deps = all_crate_deps(proc_macro = True),
)

rust_test(
    name = "openreality-cli-test",
    crate = ":openreality_cli_lib",
    deps = all_crate_deps(normal_dev = True),
)

exports_files(["Cargo.toml"])
