load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

# WGSL shader data files -- used by the Rust lib via include_str! macros
filegroup(
    name = "wgsl_shaders",
    srcs = glob(["shaders/*.wgsl"]),
    visibility = ["//visibility:public"],
)

rust_library(
    name = "openreality-gpu-shared",
    srcs = glob(["src/**/*.rs"]),
    compile_data = [":wgsl_shaders"],
    crate_name = "openreality_gpu_shared",
    deps = all_crate_deps(
        normal = True,
    ),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "openreality-gpu-shared-test",
    crate = ":openreality-gpu-shared",
    compile_data = [":wgsl_shaders"],
)

exports_files(["Cargo.toml"])
