# WASM web runtime — built via wasm-pack.
# wasm-pack handles the full compilation + wasm-bindgen pipeline.

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

genrule(
    name = "openreality_web_pkg",
    srcs = glob(["src/**/*.rs"]) + [
        "Cargo.toml",
        "//:Cargo.toml",
        "//:Cargo.lock",
        "//openreality-gpu-shared:wgsl_shaders",
    ],
    outs = [
        "openreality_web.js",
        "openreality_web_bg.wasm",
    ],
    cmd = """
        # wasm-pack runs cargo internally, needs source tree access
        CRATE_DIR=openreality-web
        if [ -d "$$CRATE_DIR" ]; then
            cd $$CRATE_DIR
        fi
        wasm-pack build --target web --release --out-dir _bazel_pkg 2>&1
        cp _bazel_pkg/openreality_web.js $(@D)/openreality_web.js
        cp _bazel_pkg/openreality_web_bg.wasm $(@D)/openreality_web_bg.wasm
        rm -rf _bazel_pkg
    """,
    tags = [
        "manual",
        "no-sandbox",
    ],
    visibility = ["//visibility:public"],
)

# Library target for native testing (WASM deps are cfg-gated)
rust_library(
    name = "openreality_web_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "openreality_web",
    deps = [
        "//openreality-gpu-shared",
        "@crates//:glam",
        "@crates//:bytemuck",
        "@crates//:log",
    ],
)

rust_test(
    name = "openreality-web-test",
    crate = ":openreality_web_lib",
)

# Supplementary web assets
filegroup(
    name = "web_assets",
    srcs = glob([
        "*.html",
        "*.orsb",
    ]),
    visibility = ["//visibility:public"],
)

exports_files(["Cargo.toml"])
