[package]
name = "openreality-web"
version = "0.1.0"
edition = "2021"
description = "OpenReality WASM web runtime — loads .orsb scenes and renders via WebGPU"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openreality-gpu-shared = { path = "../openreality-gpu-shared" }
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_log = "1"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "Element",
    "EventTarget",
    "Performance",
    "Navigator",
]

[profile.release]
opt-level = "s"
lto = true
