load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library", "rust_library", "rust_test")

# Produces libopenreality_wgpu.so (Linux), .dylib (macOS), .dll (Windows)
# Consumed by Julia via ccall at runtime.
rust_shared_library(
    name = "openreality_wgpu",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "openreality_wgpu",
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//openreality-gpu-shared",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
)

# Library target for test compilation (rust_test cannot reference rust_shared_library)
rust_library(
    name = "openreality_wgpu_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "openreality_wgpu",
    deps = all_crate_deps(
        normal = True,
    ) + [
        "//openreality-gpu-shared",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
)

rust_test(
    name = "openreality-wgpu-test",
    crate = ":openreality_wgpu_lib",
)

exports_files(["Cargo.toml"])
